<resources>
    <string name="app_name">SearchTutorial</string>
    <string name="cust_search_label">Enter customer details..</string>
    <string name="name_text">Name</string>
    <string name="customer_name_text">Customer Name</string>
    <string name="phone_number_text">Phone Number</string>
    <string name="post_code_text">Post Code</string>
    <string name="enter_post_code">Enter Post Code</string>
    <string name="door_number">Door Number</string>
    <string name="enter_door_number">Enter Door Number</string>
    <string name="search_address">Search Address</string>
    <string name="print">Print</string>
    <string name="clear">Clear</string>
    <string name="poundsymbol">£</string>
    <string name="sub_total">Sub Total</string>
    <string name="discount">Discount % </string>
    <string name="total">Total</string>
    <string name="delete">-</string>
    <string name="_1">1</string>
    <string name="order_list">Order List</string>
    <string name="businessAdd">my bus</string>
    <string name="add">Add</string>
    <string name="clear_address">Clear Address</string>
    <string name="type_in_address">Type In Address</string>
    <string name="popup_label">Enter Door Number</string>
    <string name="popup_enter_house_name">Enter House Name if available</string>
    <string name="popup_enter_road_name">Enter Street/Road Name</string>
    <string name="popup_enter_postcode">Enter Postcode</string>
    <string name="popup_enter_any_instruction">Enter any Instruction</string>
    <string name="popup_add_address">Add Address</string>
    <string name="txv_popup_instruction">Instruction</string>
    <string name="txv_popup_post_code">Post Code</string>
    <string name="txv_popup_road_name">Road/Street Name</string>
    <string name="txv_popup_house_name">House Name</string>
    <string name="txv_popup_door_number">Door Number</string>
    <string name="lbl_manual_address">Manual Address</string>
    <string name="lbl1_manual">Manual</string>
    <string name="lbl2_address_input">Manual Address Input</string>
    <string name="enter_town_name">Enter Town Name</string>
    <string name="town_name">Town Name</string>

    <string name="samosa_prompt">Choose Samosa Type</string>
    <string-array name="Samosa">
        <item>Meat</item>
        <item>Chicken</item>
        <item>Vegetable</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="search_hint">Search</string>
    <string name="search_label">SEARCH BY PHONENUMBER</string>
</resources>
