<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom">
        <Button
            android:id="@+id/btn_itemAdd"
            android:layout_width="@dimen/addMinusButtonWidth"
            android:layout_marginStart="3dp"
            android:layout_marginTop="1dp"
            android:layout_height="@dimen/addMinusButtonHeight"
            android:background="@drawable/grey_button_selector"
            android:text="+"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorGreen"/>
        <Button
            android:id="@+id/btn_itemDelete"
            android:layout_width="@dimen/addMinusButtonWidth"
            android:layout_height="@dimen/addMinusButtonHeight"
            android:background="@drawable/grey_button_selector"
            android:text="@string/delete"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="1dp"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="5dp"
            android:textColor="@color/colorRed"/>
        <TextView
            android:id="@+id/txv_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="13sp"
            android:text="@string/_1"
            android:textStyle="bold"
            android:inputType="number"
            android:layout_weight="0.2"/>
        <TextView
            android:id="@+id/edtx_itemname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textSize="13sp"
            android:textStyle="bold"
            android:layout_weight="3"/>
        <TextView
            android:id="@+id/txv_poundSymbol"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/poundsymbol"
            android:textSize="13sp"
            android:textStyle="bold"
            android:layout_weight="0.1"/>
        <TextView
            android:id="@+id/txv_itemprice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="13sp"
            android:textStyle="bold"
            android:inputType="numberDecimal"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:layout_weight="0.4"/>
    </LinearLayout>
</LinearLayout>
