<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_mainFooter"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/LL_Separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorOlive"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/edtv_empty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"/>
        <TextView
            android:id="@+id/txv_subtotalLbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="13sp"
            android:text="@string/sub_total"
            android:textStyle="bold"
            android:paddingRight="1dp"
            android:paddingLeft="1dp"
            android:layout_weight="3"/>
        <TextView
            android:id="@+id/txv_subtotal_poundSymbol"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/poundsymbol"
            android:textSize="13sp"
            android:textStyle="bold"
            android:layout_weight="0.1"/>
        <EditText
            android:id="@+id/edtv_subtotal_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:textSize="13sp"
            android:textStyle="bold"
            android:inputType="numberDecimal"
            android:layout_weight="0.5"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txv_discountLbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="13sp"
            android:text="@string/discount"
            android:textStyle="bold"
            android:layout_weight="2.5"/>
        <EditText
            android:id="@+id/edtx_discountPercent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:textSize="13sp"
            android:inputType="numberDecimal"
            android:textStyle="bold"
            android:layout_weight="0.3"/>
        <TextView
            android:id="@+id/edtx_discountPoundSymbol"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="13sp"
            android:text="@string/poundsymbol"
            android:textStyle="bold"
            android:layout_weight="0.5"/>
        <EditText
            android:id="@+id/edtx_discountPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:textSize="13sp"
            android:inputType="numberDecimal"
            android:textStyle="bold"
            android:layout_weight="0.5"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txv_totalEmpty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"/>
        <TextView
            android:id="@+id/txv_totalLbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/total"
            android:textSize="13sp"
            android:textStyle="bold"
            android:layout_weight="3"/>
        <TextView
            android:id="@+id/edtx_totalPoundsymbol"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/poundsymbol"
            android:textSize="13sp"
            android:textStyle="bold"
            android:layout_weight="0.1"/>
        <EditText
            android:id="@+id/edtx_totalPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textSize="13sp"
            android:textStyle="bold"
            android:inputType="numberDecimal"
            android:layout_weight="0.5"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:id="@+id/txv_customerNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:hint="Telephone number"
            android:textSize="13sp"
            android:gravity="center"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/txv_customerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:gravity="center"
            android:hint="Customer Name"
            android:textStyle="bold"
            android:padding="1dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txv_customerAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="Customer Address"
            android:padding="1dp"
            android:textSize="13sp"
            android:textStyle="bold"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txv_instruction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="No Instruction"
            android:padding="1dp"
            android:textSize="13sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>